<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fece2f"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnLoginBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/btnLoginBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignUpName"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLoginPassword"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtSignUpName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/chkRememberMe"
        app:layout_constraintEnd_toEndOf="@id/txtLoginPassword"
        app:layout_constraintTop_toTopOf="@id/chkRememberMe" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:buttonTint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtLoginPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtForgetPassword" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@id/btnLoginPage"
        app:layout_constraintStart_toStartOf="@id/btnLoginPage"
        app:layout_constraintTop_toBottomOf="@id/btnLoginPage" />

</androidx.constraintlayout.widget.ConstraintLayout>