<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:background="#fece2f"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnSignUpBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_an_account_two"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/btnSignUpBack" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtThree"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="1/3"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:background="@drawable/image_circle"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintTop_toBottomOf="@id/btnSignUpBack" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignUpName"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/name"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:inputType="textPersonName"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignUpUserName"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtSignUpName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="Username"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:inputType="text"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignUpEmail"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtSignUpUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUpUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignUpPassword"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtSignUpEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUpUserPassward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:inputType="textPassword"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUpPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/black"
        android:text="Next"
        android:onClick="changeLayout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/txtSignUpPassword"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@id/btnSignUpPage"
        app:layout_constraintStart_toStartOf="@id/btnSignUpPage"
        app:layout_constraintTop_toBottomOf="@id/btnSignUpPage" />

</androidx.constraintlayout.widget.ConstraintLayout>